# skill-usage

./: .env.example  .gitignore  README.md  pyproject.toml
data/: task_queries.json  task_skill_mapping.json
data/find-skills/: SKILL.md
data/find-skills-keyword/: SKILL.md
data/find-skills-semantic/: SKILL.md
scripts/: calculate_results.py  check_skill_usage.py  eval_retrieval.py  judge_skill_coverage.py  prepare_experiment.py  query_agnostic_refinement.py  query_specific_refinement.py  retrieve_skills.py  select_top_k_skills.py  sweep_retrieval.py
scripts/skill-finder-task-template/: task.toml
search_server/: bm25_search.py  http_server.py  index_builder.py  requirements.txt  semantic_search.py
tasks/3d-scan-calc/: instruction.md  task.toml
tasks/adaptive-cruise-control/: instruction.md  task.toml
tasks/azure-bgp-oscillation-route-leak/: instruction.md  task.toml
tasks/citation-check/: instruction.md  task.toml
tasks/civ6-adjacency-optimizer/: instruction.md  task.toml
tasks/court-form-filling/: instruction.md  task.toml
tasks/crystallographic-wyckoff-position-analysis/: instruction.md  task.toml
tasks/dapt-intrusion-detection/: instruction.md  task.toml
tasks/data-to-d3/: instruction.md  task.toml
tasks/dialogue-parser/: instruction.md  task.toml
tasks/dynamic-object-aware-egomotion/: instruction.md  task.toml
tasks/earthquake-phase-association/: instruction.md  task.toml
tasks/earthquake-plate-calculation/: instruction.md  task.toml
tasks/econ-detrending-correlation/: instruction.md  task.toml
tasks/energy-ac-optimal-power-flow/: instruction.md  task.toml
tasks/energy-market-pricing/: instruction.md  task.toml
tasks/enterprise-information-search/: instruction.md  task.toml
terminal-bench-2/: README.md
(+1501 files in other folders)
