[project]
name = "skill-usage"
version = "0.1.0"
description = "How Well Do Agentic Skills Work in the Wild: Benchmarking LLM Skill Usage in Realistic Settings"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "pyyaml",
    "huggingface_hub",
]

[project.urls]
Homepage = "https://github.com/UCSB-NLP-Chang/Skill-Usage"
Paper = "https://arxiv.org/abs/2604.04323"
Dataset = "https://huggingface.co/datasets/Shiyu-Lab/Skill-Usage"

[tool.ruff]
target-version = "py312"
line-length = 144

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "RUF",    # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "E722",   # bare except (common in scripts)
    "B008",   # function call in default argument
    "B905",   # zip without strict
    "UP038",  # isinstance with tuple (use X | Y in 3.10+)
]

[tool.ruff.lint.isort]
known-first-party = ["skillsbench"]
force-single-line = false
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.uv.sources]
skills-ref = { git = "https://github.com/agentskills/agentskills.git", subdirectory = "skills-ref", rev = "main" }

[dependency-groups]
dev = [
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
    "ruff>=0.8.0",
    "skills-ref>=0.1.0",
]
